--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Jon Barron
+                  Du Yuhang
                 </p>
                 <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>.
                 </p>
-                <p>My research interest is at the codesign of machine learning and architechture/hardware design.
+                <p>My research interest at the intersection of Hardware design, Computer Architecture and Machine Learning..
                   
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:jonbarron@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:22307130436@m.fudan.edu.cn">Email</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
