--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Du Yuhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/favicon/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/cv1.jpg" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
@@ -35,7 +35,7 @@
 				  <a href="https://www.threads.net/@jonbarron">Threads</a> &nbsp;/&nbsp;
 				  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Du-Yuhang/">Github</a>
+                  <a href="https://github.com/">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
