--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Du Yuhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/cv1.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="images/cv1.jpg" type="image/x-icon">    <!--这里是网络窗口的小图标-->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
@@ -32,14 +32,11 @@
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
-				  <a href="https://www.threads.net/@jonbarron">Threads</a> &nbsp;/&nbsp;
-				  <a href="https://bsky.app/profile/jonbarron.bsky.social">Bluesky</a> &nbsp;/&nbsp;
-                  <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/">Github</a>
+                  <a href="https://github.com/Du-Yuhang">Github</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/JonBarron.jpg" class="hoverZoomLink"></a>
+                <a href="images/cv1.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 10%;" alt="profile photo" src="images/cv1.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
