--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
     <meta name="author" content="Du Yuhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/cv1.jpg" type="image/x-icon">    <!--这里是网络窗口的小图标-->
+    <link rel="shortcut icon" href="images/fudan.ico" type="image/x-icon">    <!--这里是网络窗口的小图标-->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
 
   <body>
-    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <table style="width:100%;max-width:900px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
