--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <p class="name" style="text-align: center;">
                   Du Yuhang
                 </p>
-                <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>.
+                <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>
                 </p>
-                <p>My research interest at the intersection of Hardware design, Computer Architecture and Machine Learning..
+                <p>My research interest at the intersection of Hardware design, Computer Architecture and Machine Learning.
                   
                 </p>
                 <p style="text-align:center">
