--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta name="author" content="Du Yuhang">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="images/fudan.ico" type="image/x-icon">    <!--这里是网络窗口的小图标-->
+    <link rel="shortcut icon" href="ico/fudan.ico" type="image/x-icon">    <!--这里是网络窗口的小图标-->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
   </head>
@@ -28,11 +28,11 @@
                   
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:22307130436@m.fudan.edu.cn">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:22307130436@m.fudan.edu.cn"><img src="ico/gmail.ico" alt="GitHub Icon" style="width: 30px; height: 30px;"></a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="data/JonBarron-bio.txt">Bio</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?hl=en&user=jktWnL8AAAAJ">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Du-Yuhang">Github</a>
+                  <a href="https://github.com/Du-Yuhang"><img src="ico/github.ico" alt="GitHub Icon" style="width: 30px; height: 30px;"></a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
