--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
                   
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:22307130436@m.fudan.edu.cn"><img src="ico/mail.png" alt="Email Icon" style="width: 30px; height: 30px;"></a> &nbsp;&nbsp;
-                  <a href="https://www.linkedin.com/in/%E5%AE%87%E8%88%AA-%E6%9D%9C-7953a82a7/m"><img src="ico/Linkedln.png" alt="LinkedIn Icon" style="width: 30px; height: 30px;"></a> &nbsp;&nbsp;
-                  <a href="https://scholar.google.com"><img src="ico/googlescholar.png" alt="Google Scholar Icon" style="width: 30px; height: 30px;"></a> &nbsp;&nbsp;
-                  <a href="https://github.com/Du-Yuhang"><img src="ico/github.png" alt="GitHub Icon" style="width: 30px; height: 30px;"></a>
+                  <a href="mailto:22307130436@m.fudan.edu.cn"><img src="ico/mail.png" alt="Email Icon" class="icon" style="width: 30px; height: 30px;"></a> &nbsp;&nbsp;
+                  <a href="https://www.linkedin.com/in/%E5%AE%87%E8%88%AA-%E6%9D%9C-7953a82a7/m"><img src="ico/Linkedln.png" alt="LinkedIn Icon" class="icon" style="width: 30px; height: 30px;"></a> &nbsp;&nbsp;
+                  <a href="https://scholar.google.com"><img src="ico/googlescholar.png" alt="Google Scholar Icon" class="icon" style="width: 30px; height: 30px;"></a> &nbsp;&nbsp;
+                  <a href="https://github.com/Du-Yuhang"><img src="ico/github.png" alt="GitHub Icon" class="icon" style="width: 30px; height: 30px;"></a>
                 </p>
+
 
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
