--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </p>
                 <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>
                 </p>
-                <p>My research interest at the intersection of Hardware design, Computer Architecture and Machine Learning.
+                <p>My research interest at the intersection of <b>Hardware design, Computer Architecture and Machine Learning</b>.
                   
                 </p>
                 <p class="icon-links">
