--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <p class="name" style="text-align: center;">
                   Du Yuhang
                 </p>
-                <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>
-                </p>
+                <h2>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>
+                </h2>
                 <p>My research interest at the intersection of <b>Hardware design, Computer Architecture and Machine Learning</b>.
                   
                 </p>
