--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Du Yuhang
                 </p>
-                <h2>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</a>
+                <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</p>
                 </h2>
                 <p>My research interest at the intersection of <b>Hardware design, Computer Architecture and Machine Learning</b>.
                   
