--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <table style="width:100%;max-width:1200px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr style="padding:0px">
         <td style="padding:0px">
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -23,12 +23,11 @@
                   Du Yuhang
                 </p>
                 <p></p>
-                <p>I'm a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</p>
+                <p>I am a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</p>
                 </h2>
                 <p>My research interest at the intersection of <b>Hardware design, Computer Architecture and Machine Learning</b>.
                   
                 </p>
-            <p></p>
                 <p class="icon-links">
                   <a href="mailto:22307130436@m.fudan.edu.cn"><img src="ico/mail.png" alt="Email Icon" class="icon"></a>
                   <a href="https://www.linkedin.com/in/%E5%AE%87%E8%88%AA-%E6%9D%9C-7953a82a7/m"><img src="ico/Linkedln.png" alt="LinkedIn Icon" class="icon"></a>
