--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in the intersection of Hardware design, Computer Architecture and Machine Learning. So far, I do not have some research papers or projects. But one of them are being developed, which is about the hardware/algorithm codesign for time-series transformer.
+                  I'm interested in the intersection of Hardware design, Computer Architecture and Machine Learning.
               </td>
             </tr>
           </tbody></table>
