--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                   Du Yuhang
                 </p>
                 <p></p>
-                <p>I am a second-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</p>
+                <p>I am a third-year undergradute at Fudan University, <a href="https://sme.fudan.edu.cn/">School of Microelecrtronics</a> in Shanghai.</p>
                 </h2>
-                <p>My research interest at the intersection of <b>Hardware design, Computer Architecture and Machine Learning</b>.
+                <p></b>.
                   
                 </p>
                 <p class="icon-links">
@@ -48,7 +48,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  I'm interested in the intersection of Hardware design, Computer Architecture and Machine Learning.
+            
               </td>
             </tr>
           </tbody></table>
